--- a/src/assets/styles/components/tables.less
+++ b/src/assets/styles/components/tables.less
@@ -1,4 +1,4 @@
-@use '../globals';
+
 
 table,.table{
 padding: 2rem;
@@ -12,7 +12,7 @@ thead,tbody,th,tfoot,td,tr{
 td,th{
    text-wrap: wrap;
    text-overflow: ellipsis;
-   padding: globals.$basePadding * 1.5;
+   padding: .25rem * 1.5;
 
 }
 tbody{
