--- a/src/assets/styles/components/cards.less
+++ b/src/assets/styles/components/cards.less
@@ -1,19 +1,19 @@
-@use '../globals/variables' as var;
+
 
 .card{
     display: block;
-    padding: var.$basePadding * 7;
+    padding: 0.25rem * 7;
     background-color: var(--color-white);
     // padding: var(--card-padding);
     box-shadow: var(--box-shadow);
     
-    #{&}__heading{
+    &__heading{
     font-size: 2rem;
     font-weight: 900;
 
 }
 
-#{&}__body{
+&__body{
     padding: var(--card-padding);
 }
 }
