--- a/src/assets/styles/components/button.less
+++ b/src/assets/styles/components/button.less
@@ -22,4 +22,9 @@ color:white;
     background-color: @bgColor;
    color:white;
   // }
+     @media screen and (max-width:47.988rem){  
+  font-size: 0.67rem;
+  padding: 0.15rem * 2 0.15rem * 4;
+
+        }
 }
